--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,7 @@ The Mist Authors
 Alexander Van de Sande <alex.vandesande@ethdev.com>
 Bas van Kervel <bas@ethdev.com>
 Fabian Vogelsteller <fabian.vogelsteller@gmail.com>
+
+The Atlas Authors
+
+Patrick Lismore <patricklismore@gmail.com>
